# AoC2022

./: CMakeLists.txt
Day01/: elf.cpp  elf.h  main.cpp
Day02/: main.cpp
Day03/: backpack.cpp  backpack.h  main.cpp
Day04/: main.cpp
Day05/: main.cpp
Day06/: main.cpp
Day07/: main.cpp
Day08/: main.cpp
Day09/: main.cpp  rope.cpp  rope.h
Day10/: main.cpp
Day11/: Monkey.cpp  Monkey.h  main.cpp
Day12/: main.cpp
Day13/: main.cpp
Day14/: main.cpp  resources.h
