cmake_minimum_required(VERSION 3.24)
project(AoC2022)

set(CMAKE_CXX_STANDARD 17)

#add_executable(AoC2022 Day01/main.cpp Day01/elf.cpp Day01/elf.h)
#add_executable(AoC2022 Day02/main.cpp)
#add_executable(AoC2022 Day03/main.cpp Day03/backpack.cpp Day03/backpack.h)
#add_executable(AoC2022 Day04/main.cpp)
add_executable(AoC2022 Day05/main.cpp)